testdata/parser/negative/7.txt
Parse error at 7.pdl:7:15: Declared variable clash
	channel c -> a;
	             ^
